/* -------------------------------------------------------------------------- *\
 *             Apache 2.0 License Copyright © 2022 The Aurae Authors          *
 *                                                                            *
 *                +--------------------------------------------+              *
 *                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |              *
 *                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |              *
 *                |  ███████║██║   ██║██████╔╝███████║█████╗   |              *
 *                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |              *
 *                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |              *
 *                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |              *
 *                +--------------------------------------------+              *
 *                                                                            *
 *                         Distributed Systems Runtime                        *
 *                                                                            *
 * -------------------------------------------------------------------------- *
 *                                                                            *
 *   Licensed under the Apache License, Version 2.0 (the "License");          *
 *   you may not use this file except in compliance with the License.         *
 *   You may obtain a copy of the License at                                  *
 *                                                                            *
 *       http://www.apache.org/licenses/LICENSE-2.0                           *
 *                                                                            *
 *   Unless required by applicable law or agreed to in writing, software      *
 *   distributed under the License is distributed on an "AS IS" BASIS,        *
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *
 *   See the License for the specific language governing permissions and      *
 *   limitations under the License.                                           *
 *                                                                            *
\* -------------------------------------------------------------------------- */

syntax = "proto3";

package observe;

import "meta.proto";

enum LogChannelType {
  CHANNEL_STDOUT = 0;
  CHANNEL_STDERR = 1;
}


service Observe {

  rpc Status(StatusRequest) returns (StatusResponse) {}

  // request log stream for aurae. everything logged via log macros in aurae (info!, error!, trace!, ... ).
  rpc GetAuraeDaemonLogStream(GetAuraeDaemonLogStreamRequest) returns (stream LogItem) {}

  // request log stream for a sub process
  rpc GetSubProcessStream(GetSubProcessStreamRequest) returns (stream LogItem) {}

}

message StatusRequest {
  repeated meta.AuraeMeta meta = 1;
}

message StatusResponse {
  repeated meta.AuraeMeta meta = 1;
}

message GetAuraeDaemonLogStreamRequest {
}

message GetSubProcessStreamRequest {
  LogChannelType channel_type = 1;
  uint64 process_id = 2;
}

message LogItem {
  string channel = 1;
  string line = 2;
  uint64 timestamp = 3;
}